main section layout

--- a/public/index.html
+++ b/public/index.html
@@ -22,5 +22,35 @@
       </ul>
       <i class="fa-solid fa-sun"></i>
     </nav>
+    <section class="container">
+      <div class="icon-container">
+        <i class="fa-solid fa-envelope icon"></i>
+        <i class="fa-solid fa-phone icon"></i>
+      </div>
+      <form class="form-contianer">
+        <div id="inputs-container">
+          <input
+            type="text"
+            name="name"
+            id="name"
+            placeholder="Enter your name"
+          />
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="Enter your email"
+          />
+        </div>
+        <textarea
+          name="message"
+          id="message"
+          rows="15"
+          placeholder="Enter your message here..."
+        ></textarea>
+        <button class="btn">Submit</button>
+      </form>
+      <img class="graphic" src="graphic.svg" alt="graphic" />
+    </section>
   </body>
 </html>
