--- a/public/index.html
+++ b/public/index.html
@@ -52,5 +52,41 @@
       </form>
       <img class="graphic" src="graphic.svg" alt="graphic" />
     </section>
+    <section class="bottom-links">
+      <ul>
+        <li><h3>Go To</h3></li>
+        <li>Home</li>
+        <li>Contact Us</li>
+        <li>About Us</li>
+        <li>Portfolio</li>
+      </ul>
+      <ul>
+        <li><h3>Our Recent Work</h3></li>
+        <li>Marine Warehouse</li>
+        <li>Acorc Real Estate</li>
+        <li>Deco Liquid</li>
+        <li>Lorem ipsum</li>
+      </ul>
+      <ul>
+        <li><h3>Contact Us</h3></li>
+        <li>Mail</li>
+        <li>Telephone</li>
+        <li>Whatsapp</li>
+      </ul>
+    </section>
+    <footer>
+      <ul>
+        <li><i class="fa-brands fa-instagram"></i></li>
+        <li><i class="fa-brands fa-linkedin"></i></li>
+        <li><i class="fa-solid fa-envelope"></i></li>
+        <li><i class="fa-solid fa-phone"></i></li>
+        <li><i class="fa-brands fa-figma"></i></li>
+        <li><i class="fa-brands fa-goodreads-g"></i></li>
+      </ul>
+      <h4>Generic Company</h4>
+      <p>
+        <a href="/aboutUs">Learn More</a>
+      </p>
+    </footer>
   </body>
 </html>
