--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cloning Assignment - Ahmad Aziz</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,300;1,400&display=swap"
+      rel="stylesheet"
+    />
     <link href="index.css" rel="stylesheet" />
     <script
       src="https://kit.fontawesome.com/2e425fc4eb.js"
@@ -15,12 +21,20 @@
     <nav>
       <img class="logo" src="logo.svg" alt="logo" />
       <ul class="navlinks">
-        <li class="link">Home</li>
-        <li class="link">Contact Us</li>
-        <li class="link">About Us</li>
-        <li class="link">Portfolio</li>
+        <li class="link">
+          <a href="./">Home</a>
+        </li>
+        <li class="link">
+          <a href="./contact.html" target="_blank">Contact Us</a>
+        </li>
+        <li class="link">
+          <a href="./about.html" target="_blank">About Us</a>
+        </li>
+        <li class="link">
+          <a href="./portfolio.html" target="_blank">Portfolio</a>
+        </li>
       </ul>
-      <i class="fa-solid fa-sun"></i>
+      <i class="fa-solid fa-sun icon"></i>
     </nav>
     <section class="container">
       <div class="icon-container">
@@ -55,37 +69,59 @@
     <section class="bottom-links">
       <ul>
         <li><h3>Go To</h3></li>
-        <li>Home</li>
-        <li>Contact Us</li>
-        <li>About Us</li>
-        <li>Portfolio</li>
+        <li class="link">
+          <a href="./">Home</a>
+        </li>
+        <li class="link">
+          <a href="./contact.html" target="_blank">Contact Us</a>
+        </li>
+        <li class="link">
+          <a href="./about.html" target="_blank">About Us</a>
+        </li>
+        <li class="link">
+          <a href="./portfolio.html" target="_blank">Portfolio</a>
+        </li>
       </ul>
       <ul>
         <li><h3>Our Recent Work</h3></li>
-        <li>Marine Warehouse</li>
-        <li>Acorc Real Estate</li>
-        <li>Deco Liquid</li>
-        <li>Lorem ipsum</li>
+        <li class="link">
+          <a href="./">Marine Warehouse</a>
+        </li>
+        <li class="link">
+          <a href="./">Acorc Real Estate</a>
+        </li>
+        <li class="link">
+          <a href="./">Deco Liquid</a>
+        </li>
+        <li class="link">
+          <a href="./">Lorem ipsum</a>
+        </li>
       </ul>
       <ul>
         <li><h3>Contact Us</h3></li>
-        <li>Mail</li>
-        <li>Telephone</li>
-        <li>Whatsapp</li>
+        <li class="link">
+          <a href="mailto:ahamadaziz7@gmail.com">Mail</a>
+        </li>
+        <li class="link">
+          <a href="tel:+923324028983">Telephone</a>
+        </li>
+        <li class="link">
+          <a href="./">Whatsapp</a>
+        </li>
       </ul>
     </section>
     <footer>
       <ul>
-        <li><i class="fa-brands fa-instagram"></i></li>
-        <li><i class="fa-brands fa-linkedin"></i></li>
-        <li><i class="fa-solid fa-envelope"></i></li>
-        <li><i class="fa-solid fa-phone"></i></li>
-        <li><i class="fa-brands fa-figma"></i></li>
-        <li><i class="fa-brands fa-goodreads-g"></i></li>
+        <li><i class="fa-brands fa-instagram social"></i></li>
+        <li><i class="fa-brands fa-linkedin social"></i></li>
+        <li><i class="fa-solid fa-envelope social"></i></li>
+        <li><i class="fa-solid fa-phone social"></i></li>
+        <li><i class="fa-brands fa-figma social"></i></li>
+        <li><i class="fa-brands fa-goodreads-g social"></i></li>
       </ul>
       <h4>Generic Company</h4>
       <p>
-        <a href="/aboutUs">Learn More</a>
+        <a href="./about.html">Learn More</a>
       </p>
     </footer>
   </body>
